# uncanny

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: application.cpp  application.hpp  constants.hpp
src/core/input/: input.cpp  input.hpp  sdl_keyboard.cpp  sdl_keyboard.hpp
src/core/input/sdl_input/: sdl_input.cpp  sdl_input.hpp
src/core/window/: window.hpp  window_events.hpp
src/core/window/dummy_window/: dumm_window.hpp  dummy_window.cpp
src/core/window/sdl_window/: sdl_window.cpp  sdl_window.hpp
